compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__pattern_matching_on_64_float_plus_infinity_still_reachable_2.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2395
expression: "\npub fn go(x) {\n  case x {\n    <<_:64-float>> -> \"Float\"\n    <<0x7ff00000:32, 0x00000000:32>> -> \"+Infinity\"\n    _ -> \"Other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:64-float>> -> "Float"
    <<0x7ff00000:32, 0x00000000:32>> -> "+Infinity"
    _ -> "Other"
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize === 64) {
    if (Number.isFinite(bitArraySliceToFloat(x, 0, 64, true))) {
      return "Float";
    } else if (
      x.byteAt(0) === 127 &&
        x.byteAt(1) === 240 &&
        x.byteAt(2) === 0 &&
        x.byteAt(3) === 0 &&
      x.byteAt(4) === 0 &&
        x.byteAt(5) === 0 &&
        x.byteAt(6) === 0 &&
        x.byteAt(7) === 0
    ) {
      return "+Infinity";
    } else {
      return "Other";
    }
  } else {
    return "Other";
  }
}
