compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__sized_big_endian_dynamic_value.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 187
expression: "\npub fn go(i: Int) {\n  <<i:16-big>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(i: Int) {
  <<i:16-big>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function go(i) {
  return toBitArray([sizedInt(i, 16, true)]);
}
