compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__sized_bits_expression_requires_v1_9.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1642
expression: "\npub fn main() {\n  <<<<0>>:bits-5>>\n}\n  "
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<<<0>>:bits-5>>
}
  

----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:3:16
  │
3 │   <<<<0>>:bits-5>>
  │                ^ This requires a Gleam version >= 1.9.0

Use of unaligned bit arrays on the JavaScript target was introduced in
version v1.9.0. But the Gleam version range specified in your `gleam.toml`
would allow this code to run on an earlier version like v1.8.0, resulting
in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.9.0"
