compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__sized_constant_value.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 121
expression: "\npub fn go() {\n  <<256:64>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<256:64>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

export function go() {
  return toBitArray([sizedInt(256, 64, true)]);
}
