compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__sized_constant_value_max_size_for_compile_time_evaluation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 165
expression: "\npub fn go() {\n  <<-1:48>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<-1:48>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([255, 255, 255, 255, 255, 255]);
}
