compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__sized_constant_value_negative_overflow.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 154
expression: "\npub fn go() {\n  <<-80_000:16>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<-80_000:16>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([199, 128]);
}
