compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__sized_constant_value_positive_overflow.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 143
expression: "\npub fn go() {\n  <<80_000:16>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  <<80_000:16>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../gleam.mjs";

export function go() {
  return toBitArray([56, 128]);
}
